fix alignment of icons in cv

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ hr#footer-top { width: 33%; border:none; border-top: 1px solid silver; }
 #cv .icon-who,
 #cv .icon-book {
 	padding-left: 1.8em;
-	text-indent: -1.4em;
+	text-indent: -1.2em;
 }
 
 #cv .icon-when {
